

                              Kiji Schema Release Notes

Version 1.0.0-rc3
  * SCHEMA-111. Adds RELEASE_NOTES.txt
  * SCHEMA-90. KijiURIException subclasses IOException. 
  * SCHEMA-128. Add minPoolSize option to KijiTablePool. Kiji will
      aggressively open the min number of connections the first time a
      table connection is requested and will maintain at least that
      size of a pool indefinitely.
  * SCHEMA-159. Fixes a bug where KijiRowData.getValues() would return
      values in the wrong order.

Version 1.0.0-rc2
  * SCHEMA-93. Deprecate the org.kiji.schema.mapreduce package. This marks
      classes in this package as @Deprecated in preparation for the eventual
      release of KijiMapReduce.
  * SCHEMA-52. Initial effort at multiple Hadoop version support. While
      MapReduce code requires CDH4, non-MR-based operations provided by
      KijiSchema can be performed with both CDH4 or Apache Hadoop 1.0
      and HBase 0.92.1.
  * SCHEMA-60. Multiple platform profiles for KijiSchema. To facilitate
      multiple Hadoop version support in Kiji, your project must now
      explicitly declare a reference to the underlying Hadoop distribution.
      Specifically, put this in your pom.xml file to continue working with
      CDH4:
      <dependency>
        <groupId>org.kiji.platforms</groupId>
        <artifactId>kiji-cdh4-platform</artifactId>
        <version>1.0.0-rc2</version>
        <scope>provided</scope>
      </dependency>
      See https://github.com/kijiproject/kiji-platforms/blob/master/README.md
      for a full list of available platforms.
  * SCHEMA-7. Add metadata backup and restore tools ('kiji metadata')
  * SCHEMA-28. Removed KijiDataWrapper and its subclasses. This change
      refactors large parts of KijiSchema and has several incompatible
      changes associated with it:
      ** KijiURIs are now used more pervasively to reference Kiji instance
         and table names. KijiConfiguration is deprecated; you should open