@@ -3,8 +3,10 @@
                               Kiji Schema Release Notes
 
 Version 1.0.0-rc3
+  * SCHEMA-127. Command-line tools --confirm is replaced with --interactive.
+  * SCHEMA-50. Kiji.close() is replaced by Kiji.retain() and Kiji.release().
   * SCHEMA-111. Adds RELEASE_NOTES.txt
-  * SCHEMA-90. KijiURIException subclasses IOException. 
+  * SCHEMA-90. KijiURIException subclasses IOException.
   * SCHEMA-128. Add minPoolSize option to KijiTablePool. Kiji will
       aggressively open the min number of connections the first time a
       table connection is requested and will maintain at least that
